--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Analisador</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <p>ola mundo</p>
+    <header>
+        <h1>Analisador de números</h1>
+    </header>
+    <section>
+        <div>
+            Número entre 1 a 100:
+            <input type="number" name="fnum" id="fnum">
+            <input type="button" value="Adicionar" onclick="adicionar()">
+            <br> <select name="flista" id="flista" size="6"></select><br>
+            <input type="button" value="Finalizar" onclick="finalizar()">
+        </div>
+        <div id="res">
 
+        </div>
+    </section>
+    <footer>
+        <p><a href="https://www.instagram.com/anadmelosz/?next=%2F" target="_blank">@anadmelosz</a></p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
